Fix for Gallery scroll issues
Vertical thumbs are a no-go; reverted to horizontal scroll with a better layout.

--- a/_sass/core/responsive.scss
+++ b/_sass/core/responsive.scss
@@ -29,7 +29,8 @@
     padding: 30px 30px 30px 60px;
   }
 
-  // Section 1
+  // Section 2
+  figure.galleryCard:nth-child(even) { left: -260px; }
 
   // Section 3
   .workCopy {
@@ -37,10 +38,6 @@
     width: 100%;
     padding: 0;
     font-size: 16pt;
-  }
-  #gallery {
-    height: 70vh;
-    padding-top: 30px !important;
   }
   .galleryCard h4 { font-size: 13pt; }
 
