--- a/_sass/elements/work.scss
+++ b/_sass/elements/work.scss
@@ -30,26 +30,26 @@
 
 #gallery {
   width: 100%;
-  height: 70vh;
+  height: 600px;
   max-width: 1200px;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: hidden;
+  overflow-x: auto;
   padding-bottom: 15px;
 }
 
 #galleryWrapper {
 //  margin-left: calc(8vw - 30px);
   width: 100%;
-  height: 70vh;
+  height: 600px;
   max-height: 550px;
   margin: 0 5%;
+  display: -webkit-inline-box;
 }
 
 figure.galleryCard {
   font-family: 'Raleway', Arial, sans-serif;
   color: #fff;
   position: relative;
-  display: inline-block;
   overflow: hidden;
   margin: 10px 1% 1% 1%;
   width: 250px;
@@ -136,6 +136,12 @@ figure.galleryCard.hover figcaption h4 {
 figure.galleryCard:hover figcaption p,
 figure.galleryCard.hover figcaption p {
   opacity: 0.7;
+}
+
+figure.galleryCard:nth-child(even) {
+  top: 275px;
+  left: calc(-260px - 1%);
+  margin-right: -250px;
 }
 
 .modal-dialog { width: 80vw; }
